samples/errors/action_intersects_other_action.sara
exemple1 (input -> output) :=
  auto {
    state state1, state2  ;
    first state1 ;
    state1 : input -> output {
      ! input goto state2 ;
      ! input goto state2 ;
      ! input goto state2 ;
    }
    state2 : ! input -> !output {
      input goto state1 ;
    }
  }
;
